--- a/app/styles/modules/_constants.scss
+++ b/app/styles/modules/_constants.scss
@@ -1,9 +1,9 @@
-@import "../partials/base";
+$regular: 'SourceSansPro-Regular';
 
 
 body {
   background: #000;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  @include use-normal-font($regular, 400, 1rem, 2px, rgb(255, 255, 255));
   color: #333;
 }
 
@@ -23,10 +23,13 @@ ul, li {
 	margin: 0; padding: 0;
 }
 
-a img {
-	border:0px;
-}
+a {
 
+  color: rgb(255, 255, 255);
+  img {
+    border:0px;
+  }
+}
 p {
 	text-align: justify;
 	-webkit-hyphens: auto;
