font animation -- needs improvement

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 // endbower
 // Partials
 @import "partials/base";
+@import "foundation";
 // Modules and Variables
 @import "modules/constants";
 @import "modules/all";
