--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -2,9 +2,14 @@
 <div class="bg">
   <ul id="nav">
     <template v-if='links'>
-    <li v-repeat='links.link' class="{{linkName}}">
-      <a href="#{{linkPath}}">{{linkName | uppercase}}</a>
-    </li>
+      <li v-repeat='links.link'>
+        <a href="#{{linkPath}}" id="{{id}}">{{linkName | uppercase}}</a>
+      </li>
     </template>
   </ul>
+</div>
+
+<div class="project-gui">
+<a class="close-button" href="/works" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">(x) close<div class="u-line" style="transform-origin: left center 0px; transform: matrix(0, 0, 0, 1, 0, 0);"></div></a>
+</div>
 </div>
