--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -1,12 +1,20 @@
-$regular: 'SourceSansPro-Regular';
 
-
-body {
-  background: #000;
-  @include use-normal-font($regular, 400, 1rem, 2px, rgb(255, 255, 255));
-  color: #333;
+html body {
+  margin: 0;
+  padding: 0;
+  @extend %full-size;
 }
 
+body{
+  color: white;
+  background: black;
+  position: relative;
+}
+
+html{
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
 html, body, p{
 	-webkit-font-smoothing: antialiased;
@@ -14,21 +22,19 @@ html, body, p{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	/*-webkit-text-size-adjust: 100%;*/
-	/*overflow-x: hidden;*/
-
+  @include use-normal-font($regular, 400, 1rem, 2px, rgb(255, 255, 255));
 }
 
 ul, li {
-	margin: 0; padding: 0;
+	margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 a {
   -webkit-transition: all 0.2s; -moz-transition: all 0.2s; -ms-transition: all 0.2s; -o-transition: all 0.2s; transition: all 0.2s;
-  color: rgb(255, 255, 255);
-  img {
-    border:0px;
-  }
+  color: white;
+  text-decoration: none;
 }
 
 a:hover{
@@ -48,4 +54,11 @@ hr {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.3);
     border-bottom: 1px solid rgba(255, 255, 255, 0.6);
+}
+
+
+input[type=text]:focus, textarea:focus {
+    box-shadow: none;
+    border: none;
+    outline: none;
 }
