--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,14 +1,18 @@
 // bower:scss
 // endbower
+
+//Vendor
+@import "foundation";
+@import "bourbon";
+//Utils
+@import "utils/helpers";
 // Partials
 @import "partials/variables";
 @import "partials/colors";
 @import "partials/fonts";
 //Partials with font dependency
 @import "partials/constants";
-//vendor
-@import "foundation";
-@import "bourbon";
 // Modules and Variables
 @import "modules/all";
+@import "modules/menu";
 @import "modules/loader";
