--- a/app/styles/modules/_all.scss
+++ b/app/styles/modules/_all.scss
@@ -2,11 +2,16 @@
 
 #wrapper .bg{
   background: url(../images/test.jpg) no-repeat;
-  @extend %full-size;
+  width: 100%;
+  height: 100vh;
   position:fixed;
   display: none;
-  background-position:50% 50%;  /* Sets reference point to scale from */
+  background-position:70% 50%;
   background-size:cover;
+
+  @media #{$medium-up} {
+    background-position:50% 50%;  /* Sets reference point to scale from */
+  }
   // display: none;
   //x-Achses right: transform: matrix3d(0.99068874576641, 0, 0.136146277994579, 0, -0.00949319195941821, 0.997566048996531, 0.0690786305298062, 0, -0.135814904624635, -0.0697278845903978, 0.988277457899526, 0, 0, 0, 0, 1);
   // x-Achses left: transform: matrix3d(0.99026806874157, 0, -0.139173100960065, 0, 0.00918692989706564, 0.997818907533004, 0.0653684028312472, 0, 0.138869551557953, -0.0660108155504975, 0.988108202516532, 0, 0, 0, 0, 1);
@@ -15,52 +20,23 @@
 }
 
 #wrapper{
-  width:100%;
-  height:100%;
-  position:fixed;
-
-  #nav{
-    text-align: center;
-    color: $white;
-    @include use-normal-font($light, 400, modular-scale(2), modular-scale(1), rgb(255, 255, 255));
-    position: inherit;
-    top: 40%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-  }
+  @extend %full-size;
+  position:relative;
 }
 
+.panel {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
 
+.pin{
+  transform: translate(-100%, 0%) matrix(1, 0, 0, 1, 0, 0);
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: $black;
+}
 // transform-origin: left center 0px;
 // transform: matrix(0, 0, 0, 1, 0, 0);
 // transform: matrix(1, 0, 0, 1, 0, 0);
-
-.project-gui .u-line {
-height: 2px;
-margin-top: -1px;
-top: 50%;
-bottom: auto;
-background-color: #989898;
--webkit-transform: scaleX(0);
--ms-transform: scaleX(0);
-transform: scaleX(0);
-}
-.u-line {
-width: 100%;
-height: 1px;
-background-color: #fff;
-position: absolute;
-left: 0;
-bottom: 0;
-}
-
-.project-gui .close-button, .project-gui .project-link {
-    position: relative;
-    padding: 0 4px;
-}
-.project-gui .close-button {
-    float: right;
-    color: #989898;
-    font-size: 13px;
-    margin-right: 62px;
-}
