--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@
 //Utils
 @import "utils/helpers";
 // Partials
+@import "partials/transitions";
 @import "partials/variables";
 @import "partials/colors";
 @import "partials/fonts";
