--- a/app/src/components/loadScreen/loader.html
+++ b/app/src/components/loadScreen/loader.html
@@ -1,5 +1,5 @@
 <div id="loader">
-  <div id="progress">{{preload}}</div>
+  <div id="progress">{{preloadBar}}</div>
   <div id="progressbar">
     <div class="msg"/></div>
   </div>
