--- a/app/styles/modules/_loader.scss
+++ b/app/styles/modules/_loader.scss
@@ -5,7 +5,8 @@
   height: 100vh;
   overflow: hidden;
   background-color: $black;
-  opacity: 1;
+  // opacity: 1;
+  z-index: 1;
 }
 #progress {
   font-size: 20px;
