--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -1,4 +1,8 @@
 $light: 'SourceSansPro-Light';
 $regular: 'SourceSansPro-Regular';
 $bold: 'SourceSansPro-Bold';
-$bold: 'SourceSansPro-Semibold';
+$semiBold: 'SourceSansPro-Semibold';
+$extraLight: 'SourceSansPro-ExtraLight';
+$black: 'SourceSansPro-Black';
+$blackItalic: 'SourceSansPro-BlackItalic';
+$italic: 'SourceSansPro-Italic';
