--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -1,10 +1,10 @@
 
-<div class="bg" class="fade-transition">
+<div class="bg">
   <div class="row fullWidth absoluteCentering">
     <div class="large-12 columns">
       <ul id="nav">
         <li v-for="item in links">
-          <a href="#{{item.linkPath}}" id="{{item.id}}">{{item.linkName | uppercase}}</a>
+          <a href="#{{item.linkPath}}" id="{{item.id}}" class="font">{{item.linkName | uppercase}}</a>
           <div class="line" style="transform-origin: left center 0px; transform: matrix(0, 0, 0, 1, 0, 0);"></div>
         </li>
       </ul>
