--- a/app/styles/modules/_all.scss
+++ b/app/styles/modules/_all.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 #wrapper .bg{
-  background: url(../images/test.jpg) no-repeat;
+  background: url(../images/hp.png) no-repeat;
   width: 100%;
   height: 100vh;
   position:fixed;
@@ -39,7 +39,7 @@
 }
 
 .pin{
-  transform: translate(-100%, 0%) matrix(1, 0, 0, 1, 0, 0);
+  transform: translate(0%, -100%) matrix(1, 0, 0, 1, 0, 0);
   width: 100vw;
   height: 100vh;
   overflow: hidden;
