chaos here. changed to vue.router to have proper page routing

--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -1,10 +1,10 @@
 
-<div class="bg">
+<div class="bg" transition="fade">
   <div class="row fullWidth absoluteCentering">
     <div class="large-12 columns">
       <ul id="nav">
         <li v-for="item in links">
-          <a href="#{{item.linkPath}}" id="{{item.id}}" class="font">{{item.linkName | uppercase}}</a>
+          <a id="{{item.id}}" class="font">{{item.linkName | uppercase}}</a>
           <div class="line" style="transform-origin: left center 0px; transform: matrix(0, 0, 0, 1, 0, 0);"></div>
         </li>
       </ul>
@@ -13,5 +13,4 @@
 </div>
 
 
-<div class="pin">
-</div>
+<!-- v-link="{ path: 'item.linkPath'}" -->
