--- a/app/styles/modules/_all.scss
+++ b/app/styles/modules/_all.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 #wrapper .bg{
-  background: url(../images/hp.png) no-repeat;
+  background: url(../images/bgTest.jpg) no-repeat;
   width: 100%;
   height: 100vh;
   position:fixed;
