--- a/app/styles/partials/_fonts.scss
+++ b/app/styles/partials/_fonts.scss
@@ -36,3 +36,4 @@ $font_dir: '../fonts/';
 @include register-font('SourceSansPro-LightItalic');
 @include register-font('SourceSansPro-ExtraLightItalic');
 @include register-font('SourceSansPro-Italic');
+@include register-font('PoiretOne-Regular');
