--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -6,3 +6,4 @@ $extraLight: 'SourceSansPro-ExtraLight';
 $black: 'SourceSansPro-Black';
 $blackItalic: 'SourceSansPro-BlackItalic';
 $italic: 'SourceSansPro-Italic';
+$regularPo: 'PoiretOne-Regular';
