--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -1,18 +1,41 @@
+<!-- <div class="border">
+  <div class="border-top"></div>
+  <div class="border-bottom"></div>
+  <div class="border-left"></div>
+  <div class="border-right"></div>
+</div> -->
 
-<div class="bg" transition="fade">
+<div class="overlay">
   <div class="row fullWidth">
-    <div class="large-12 columns">
-      <ul id="nav">
-        <li v-for="item in links">
-          <a id="{{item.id}}" class="font">{{item.linkName}}</a>
-          <div class="line" style="transform-origin: left center 0px; transform: matrix(0, 0, 0, 1, 0, 0);"></div>
-        </li>
-      </ul>
+    <div class="large-10 columns">
+      <div>{{{introText}}}</div>
     </div>
-    <div id='myContainer'></div>
   </div>
-  <router-view></router-view>
 </div>
+
+<section class="bg" transition="fade">
+</section>
+
+
+
+<section class="work">
+ <p class="bold"> THE <br> WORK </p>
+</section>
+
+
+<section class="contact">
+
+</section>
+
+<!-- <router-view "keep-alive"></router-view> -->
 
 
 <!-- v-link="{ path: 'item.linkPath'}" -->
+<!-- <div class="large-12 columns">
+  <ul id="nav">
+    <li v-for="item in links">
+      <a id="{{item.id}}" class="font">{{item.linkName}}</a>
+      <div class="line" style="transform-origin: left center 0px; transform: matrix(0, 0, 0, 1, 0, 0);"></div>
+    </li>
+  </ul>
+</div> -->
