--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -1,9 +1,20 @@
-$light: 'SourceSansPro-Light';
-$regular: 'SourceSansPro-Regular';
-$bold: 'SourceSansPro-Bold';
-$semiBold: 'SourceSansPro-Semibold';
-$extraLight: 'SourceSansPro-ExtraLight';
-$black: 'SourceSansPro-Black';
-$blackItalic: 'SourceSansPro-BlackItalic';
-$italic: 'SourceSansPro-Italic';
-$regularPo: 'PoiretOne-Regular';
+// $light: 'SourceSansPro-Light';
+// $regular: 'SourceSansPro-Regular';
+// $bold: 'SourceSansPro-Bold';
+// $semiBold: 'SourceSansPro-Semibold';
+// $extraLight: 'SourceSansPro-ExtraLight';
+// $black: 'SourceSansPro-Black';
+// $blackItalic: 'SourceSansPro-BlackItalic';
+// $italic: 'SourceSansPro-Italic';
+// $regularPo: 'PoiretOne-Regular';
+
+$regular: 'OpenSans-Regular';
+$bold: 'OpenSans-Bold';
+$boldItalic: 'OpenSans-BoldItalic';
+$extraBold: 'OpenSans-ExtraBold';
+$extraBoldItalic: 'OpenSans-ExtraBoldItalic';
+$italic: 'OpenSans-Italic';
+$light: 'OpenSans-Light';
+$lightItalic: 'OpenSans-LightItalic';
+$semiBold: 'OpenSans-SemiBold';
+$semiBoldItalic: 'OpenSans-SemiBoldItalic';
