--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,8 @@
 //Partials with font dependency
 @import "partials/constants";
 // Modules and Variables
-@import "modules/all";
+
+@import "modules/home";
 @import "modules/menu";
 @import "modules/loader";
+@import "modules/fontStyles";
