--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -1,10 +1,3 @@
-<!-- <div class="border">
-  <div class="border-top"></div>
-  <div class="border-bottom"></div>
-  <div class="border-left"></div>
-  <div class="border-right"></div>
-</div> -->
-
 <div class="overlay">
   <div class="row fullWidth">
     <div class="large-10 columns">
@@ -14,12 +7,17 @@
 </div>
 
 <section class="bg" transition="fade">
+  <div class="tag">
+    <p id="0" class="name">MICHAEL SCHADE</p>
+    <p id="1" class="description_one">INTERACTION</p>
+    <p id="2" class="description_two">DESIGN</p>
+  </div>
 </section>
 
 
 
 <section class="work">
- <p class="bold"> THE <br> WORK </p>
+ {{{work}}}
 </section>
 
 
