--- a/app/styles/modules/_loader.scss
+++ b/app/styles/modules/_loader.scss
@@ -23,7 +23,7 @@
   left: 10%;
   position: absolute;
   text-align: center;
-  top: 50%;
+  top: 70%;
   right: 10%;
 
   .bar {
@@ -42,6 +42,24 @@
     font-size: 2rem;
     font-weight: 800;
     color: #fff;
+  }
+
+}
+
+
+
+.loaderBg{
+  position:relative;
+  background: url(../images/logoNegative.png) no-repeat;
+  width: 100%;
+  height: 100vh;
+  // display: none;
+  background-position:50% 50%;
+  background-size: cover;
+
+  @media #{$medium-up} {
+    position:relative;
+    background-position:50% 50%;  /* Sets reference point to scale from */
   }
 
 }
