fixing transition problems

--- a/app/src/components/loadScreen/loader.html
+++ b/app/src/components/loadScreen/loader.html
@@ -1,4 +1,4 @@
-<div id="loader" v-show="show" transition="fade">
+<div id="loader" transition="fade">
   <div class="loaderBg"></div>
   <div id="progress">{{preloadBar}}</div>
   <div id="progressbar">
