--- a/app/src/components/homeScreen/home.html
+++ b/app/src/components/homeScreen/home.html
@@ -1,10 +1,11 @@
-<div class="overlay">
+<!-- <div class="overlay">
   <div class="row fullWidth">
     <div class="large-10 columns">
       <div>{{{introText}}}</div>
     </div>
   </div>
-</div>
+</div> -->
+
 
 <section class="bg" transition="fade">
   <div class="tag">
