--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -2,7 +2,8 @@
 
 #wrapper .bg{
   position:relative;
-  background: url(../images/logo.png) no-repeat;
+  background-image: url(../images/logo.png) !important;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
   background-position:50% 50%;
@@ -53,13 +54,18 @@
 .tag{
   // transform: matrix(1, 0, 0, 1, 668, 42); transition: transform 100ms linear;
   position: absolute;
-  top: 75%;
+  top: 70%;
   left: 50%;
-  transform: translateX(-50%) translateY(-75%);
+  transform: translateX(-50%) translateY(-80%);
 
   @include breakpoint(xxlarge up) {
     top: 45%;
     left: 35vw;
+    // transform: translateX(-35%) translateY(-45%);
+  }
+
+  @include breakpoint(medium down) {
+    top: 80%;
     // transform: translateX(-35%) translateY(-45%);
   }
 
@@ -72,7 +78,11 @@
   }
 
   p{
-    text-align: right;
+    text-align: center;
+
+    @include breakpoint(xxlarge up) {
+      text-align: right;
+    }
   }
 }
 
