--- a/app/styles/modules/_loader.scss
+++ b/app/styles/modules/_loader.scss
@@ -1,9 +1,9 @@
 
 #loader{
-  position: absolute;
-  width: 100vw;
+  position: relative;
+  width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow-y: hidden;
   background-color: $black;
   // opacity: 1;
   z-index: 1;
@@ -50,7 +50,8 @@
 
 .loaderBg{
   position:relative;
-  background: url(../images/logoNegative.png) no-repeat;
+  background-image: url(../images/logoNegative.png) !important;
+  background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
   // display: none;
