--- a/app/styles/modules/_loader.scss
+++ b/app/styles/modules/_loader.scss
@@ -1,8 +1,10 @@
 
 #loader{
-  position: relative;
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  top: 0;
+  left: 0;
   overflow-y: hidden;
   background-color: $black;
   // opacity: 1;
@@ -53,7 +55,7 @@
   background-image: url(../images/logoNegative.png) !important;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   // display: none;
   background-position:50% 50%;
   background-size: cover;
