--- a/app/styles/partials/_transitions.scss
+++ b/app/styles/partials/_transitions.scss
@@ -10,3 +10,17 @@
 .fade-leave {
   opacity: 0;
 }
+
+
+
+.hfade-transition {
+  transition: 2.0s ease;
+}
+
+.hfade-enter {
+  opacity: 0;
+}
+
+.hfade-leave {
+  opacity: 0;
+}
