--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -20,6 +20,7 @@
   border-bottom: 0;
   border-width: 0.5rem;
   background-color: #e1e1e1;
+  box-sizing: content-box;
   // overflow-y: hidden;
 
   @media #{$medium-up} {
@@ -28,20 +29,30 @@
 
 }
 
-.transformTest{
-  transform: translate(0%, -100%) matrix(1, 0, 0, 1, 0, 0);
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  background-color: $black;
-}
-
 
 .work{
   position: relative;
   width: 100%;
   height: 100vh;
   background-color: rgb(45, 179, 32);
+  box-sizing: border-box;
+
+  .columns{
+    float: none;
+    width: auto;
+    background: rgb(172, 172, 172);
+  }
+  .columns:last-child:not(:first-child){
+    float: right;
+  }
+  .row{
+    background: #f9f9f9;
+    font-size: 11px;
+    margin-bottom: 10px;
+    line-height: 2rem;
+    border: solid 1px #c6c6c6;
+    margin-bottom: 1.5rem;
+  }
 }
 
 .contact{
@@ -53,6 +64,7 @@
 
 .tag{
   // transform: matrix(1, 0, 0, 1, 668, 42); transition: transform 100ms linear;
+
   position: absolute;
   top: 70%;
   left: 50%;
@@ -78,6 +90,7 @@
   }
 
   p{
+    @include use-normal-font($semiBold, 400, 1rem, 2px, rgb(255, 255, 255));
     text-align: center;
 
     @include breakpoint(xxlarge up) {
@@ -85,7 +98,6 @@
     }
   }
 }
-
 
 
 // transform-origin: left center 0px;
