--- a/app/styles/modules/_menu.scss
+++ b/app/styles/modules/_menu.scss
@@ -1,30 +1,60 @@
-#nav{
-  text-align: center;
+*{
+  -webkit-transition: opacity 100ms ease;
+  transition: opacity 100ms ease;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+#box{
   position: absolute;
-  // color: $white;
-  line-height: 2.1rem;
-  @include use-normal-font($regular, 400, modular-scale(1.5), 0.1rem, $white);
-  position: inherit;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  @extend %clearfix;
+  // background:lightgrey;
+  width:6.5rem;
+  height:4rem;
+  z-index: 99;
+  right: 0;
+}
+ul{
+  padding:2rem;
+}
+li{
+  list-style:none;
+  width:100%;
+  height:6px;
+  background:#000;
+  margin-bottom:6px;
+  position:relative;
+}
+li:first-child{
+  -webkit-transform:rotate(0deg);
+  transform:rotate(0deg);
+  top:0px;
+}
+li:last-child{
+  -webkit-transform:rotate(0deg);
+  transform:rotate(0deg);
+  top:0px;
+}
+.open li{
+  opacity:0;
+}
+.open li:first-child{
+  -webkit-transform:rotate(45deg);
+  transform:rotate(45deg);
+  top:12px;
+  opacity:1;
+}
+.open li:last-child{
+  -webkit-transform:rotate(-45deg);
+  transform:rotate(-45deg);
+  top:-12px;
+  opacity:1;
+}
 
-  @media #{$medium-up} {
-    @include use-normal-font($regular, 400, modular-scale(3), 0.1rem, $white);
-  }
-
-  li{
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .line {
+.transformTest{
+  position: absolute;
+  transform: translate(0%, -120%) matrix(1, 0, 0, 1, 0, 0);
   width: 100%;
-  height: 1px;
-  background-color: #fff;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  }
+  height: 100%;
+  overflow: hidden;
+  background-color: $white;
+  z-index: 33;
 }
