--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -2,12 +2,13 @@
 
 #wrapper .bg{
   position:relative;
-  background-image: url(../images/logo.png) !important;
+  background-image: url(../images/logo.png);
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
   background-position:50% 50%;
   background-size: cover;
+  transition: all 500ms ease;
 
 }
 
@@ -19,7 +20,7 @@
   border-style: solid;
   border-bottom: 0;
   border-width: 0.5rem;
-  background-color: #e1e1e1;
+  background-color: #DADADA;
   box-sizing: content-box;
   // overflow-y: hidden;
 
@@ -85,20 +86,30 @@
     color: black;
   }
 
-  .description_one description_two{
-    color: rgb(136, 136, 136);
+  .description_one{
+    color: white;
   }
 
-  p{
-    @include use-normal-font($semiBold, 400, 1rem, 2px, rgb(255, 255, 255));
-    text-align: center;
+  .description_two{
+    color: white;
+  }
 
-    @include breakpoint(xxlarge up) {
-      text-align: right;
-    }
+  @include use-normal-font($semiBold, 400, 1rem, 2px, rgb(255, 255, 255));
+  text-align: center;
+
+  @include breakpoint(xxlarge up) {
+    text-align: right;
   }
 }
 
+
+// .logo{
+//
+// }
+//
+// .nlogo{
+//
+// }
 
 // transform-origin: left center 0px;
 // transform: matrix(0, 0, 0, 1, 0, 0);
