--- a/app/styles/modules/_menu.scss
+++ b/app/styles/modules/_menu.scss
@@ -1,9 +1,3 @@
-*{
-  -webkit-transition: opacity 100ms ease;
-  transition: opacity 100ms ease;
-  -webkit-transition: all 500ms ease;
-  transition: all 500ms ease;
-}
 #box{
   position: absolute;
   // background:lightgrey;
@@ -11,50 +5,72 @@
   height:4rem;
   z-index: 99;
   right: 0;
-}
-ul{
-  padding:2rem;
-}
-li{
-  list-style:none;
-  width:100%;
-  height:6px;
-  background:#000;
-  margin-bottom:6px;
-  position:relative;
-}
-li:first-child{
-  -webkit-transform:rotate(0deg);
-  transform:rotate(0deg);
-  top:0px;
-}
-li:last-child{
-  -webkit-transform:rotate(0deg);
-  transform:rotate(0deg);
-  top:0px;
-}
-.open li{
-  opacity:0;
-}
-.open li:first-child{
-  -webkit-transform:rotate(45deg);
-  transform:rotate(45deg);
-  top:12px;
-  opacity:1;
-}
-.open li:last-child{
-  -webkit-transform:rotate(-45deg);
-  transform:rotate(-45deg);
-  top:-12px;
-  opacity:1;
+
+  *{
+    -webkit-transition: opacity 100ms ease;
+    transition: opacity 100ms ease;
+    -webkit-transition: all 500ms ease;
+    transition: all 500ms ease;
+  }
+
+
+  ul{
+    padding:2rem;
+  }
+  li{
+    list-style:none;
+    width:100%;
+    height:4px;
+    background:#000;
+    margin-bottom:6px;
+    position:relative;
+  }
+  li:first-child{
+    -webkit-transform:rotate(0deg);
+    transform:rotate(0deg);
+    top:0px;
+  }
+  li:last-child{
+    -webkit-transform:rotate(0deg);
+    transform:rotate(0deg);
+    top:0px;
+  }
+  .open li{
+    opacity:0;
+  }
+  .open li:first-child{
+    -webkit-transform:rotate(45deg);
+    transform:rotate(45deg);
+    top:12px;
+    opacity:1;
+  }
+  .open li:last-child{
+    -webkit-transform:rotate(-45deg);
+    transform:rotate(-45deg);
+    top:-12px;
+    opacity:1;
+  }
 }
 
-.transformTest{
+.slide {
+  transform: translate3d(0, -100%, 0);
   position: absolute;
-  transform: translate(0%, -120%) matrix(1, 0, 0, 1, 0, 0);
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: $white;
+  background-color: rgba(255, 255, 255, 0.9);;
   z-index: 33;
+  transition: all 300ms ease;
+}
+
+
+.trans{
+  transform: translate3d(0, 0%, 0);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.9);;
+  z-index: 33;
+  transition: all 300ms ease;
 }
