--- a/app/styles/partials/_variables.scss
+++ b/app/styles/partials/_variables.scss
@@ -18,3 +18,8 @@ $light: 'OpenSans-Light';
 $lightItalic: 'OpenSans-LightItalic';
 $semiBold: 'OpenSans-SemiBold';
 $semiBoldItalic: 'OpenSans-SemiBoldItalic';
+
+
+
+$typl8-serif-boolean: false !default;
+$typl8-custom-font: true !default;
