--- a/app/styles/modules/_menu.scss
+++ b/app/styles/modules/_menu.scss
@@ -61,6 +61,7 @@
   background-color: rgba(255, 255, 255, 1);;
   z-index: 33;
   transition: all 300ms ease;
+  text-align: center;
 }
 
 
@@ -73,4 +74,34 @@
   background-color: rgba(255, 255, 255, 0.9);;
   z-index: 33;
   transition: all 300ms ease;
+}
+
+
+.nav a{
+  pointer-events: auto;
+  display: block;
+  position: relative;
+}
+
+
+.line{
+  position: absolute;
+  background-color: #7FFFD4;
+  width: 100%;
+  height: 0.4rem;
+  top: 50%;
+  left: 0;
+}
+
+.lleave{
+  transform: translate3d(-100%,0, 0);
+  opacity: 0;
+  transition: all 300ms cubic-bezier(.19,1,.22,1);
+}
+
+.lenter{
+  display: block;
+  transform: translate3d(0%,0, 0);
+  opacity: 1;
+  transition: all 300ms cubic-bezier(.19,1,.22,1);
 }
