--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -8,7 +8,7 @@
   height: 100vh;
   background-position:50% 50%;
   background-size: cover;
-  transition: all 500ms ease;
+  // transition: all 500ms ease;
 }
 
 #wrapper{
