--- a/app/styles/modules/_menu.scss
+++ b/app/styles/modules/_menu.scss
@@ -75,7 +75,10 @@
   z-index: 33;
   transition: all 300ms ease;
 }
-
+.nav {
+  position: absolute;
+  display: inline-block;
+}
 
 .nav a{
   pointer-events: auto;
@@ -88,20 +91,20 @@
   position: absolute;
   background-color: #7FFFD4;
   width: 100%;
-  height: 0.4rem;
+  height: 0.6rem;
   top: 50%;
   left: 0;
 }
 
 .lleave{
-  transform: translate3d(-100%,0, 0);
+  transform: matrix(0.1,0,0,1,0,0);
   opacity: 0;
-  transition: all 300ms cubic-bezier(.19,1,.22,1);
+  transition: all 800ms cubic-bezier(.19,1,.22,1);
 }
 
 .lenter{
   display: block;
-  transform: translate3d(0%,0, 0);
+  transform: matrix(1,0,0,1,0,0);
   opacity: 1;
-  transition: all 300ms cubic-bezier(.19,1,.22,1);
+  transition: all 800ms cubic-bezier(.19,1,.22,1);
 }
