--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@
 @import "foundation";
 @include foundation-global-styles; // Always include the global-styles
 @include foundation-flex-grid;
+@import "bourbon";
 @import "typeplate";
 //Utils
 @import "utils/helpers";
