--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,6 @@
 // Modules and Variables
 @import "modules/home";
 @import "modules/grid";
-@import "modules/menu";
+@import "modules/nav";
 @import "modules/loader";
 @import "modules/fontStyles";
