--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -13,6 +13,12 @@
     transition: all 500ms ease;
   }
 
+  .about{
+    position:fixed;
+    margin-top: 1rem;
+  }
+
+
 
   ul{
     padding:2rem;
