--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -34,8 +34,9 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #DADADA;
+  background-color: #E6E6E6;
   box-sizing: border-box;
+
 
   .columns{
     float: none;
@@ -55,9 +56,19 @@
     margin-bottom: 1.5rem;
   }
 
+  .angle{
+    background-color: #E6E6E6;
+    position: relative;
+    width: 101%;
+    height: 7rem;
+    bottom: 4rem;
+    transform: rotate(-3deg);
+    transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
+  }
+
   .title{
     // display: block;
-    @include use-normal-font($semiBold, 400, 6.25rem, 0, rgb(255, 255, 255));
+    @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(255, 255, 255));
     position: fixed;
     top:50%;
     left: 50%;
@@ -71,7 +82,30 @@
     pointer-events: none;
     z-index: 19;
   }
+
+  .left{
+    position: relative;
+    width: 1rem;
+    height: 20rem;
+    background: #FFFFFF;
+    left: -1rem;
+    top: -5rem;
+    z-index: 10;
+    float: left;
+  }
+
+  .right{
+    position: relative;
+    width: 1rem;
+    height: 20rem;
+    background: #FFFFFF;
+    left: 1rem;
+    top: -25rem;
+    z-index: 10;
+    float: right;
+  }
 }
+
 
 .contact{
   position: relative;
@@ -88,7 +122,7 @@
 
 .scroll_hint{
   position: absolute;
-  bottom: 10%;
+  bottom: 20%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
