--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -49,20 +49,21 @@
 
   .row{
     // background: #f9f9f9;
-    font-size: 11px;
-    margin-bottom: 10px;
-    line-height: 2rem;
+    // font-size: 11px;
+    // margin-bottom: 10px;
+    // line-height: 2rem;
     // border: solid 1px #c6c6c6;
-    margin-bottom: 1.5rem;
+    // margin-bottom: 1.5rem;
+    // margin-top: -1.5rem;
   }
 
   .angle{
     background-color: #E6E6E6;
     position: relative;
     width: 101%;
-    height: 7rem;
-    bottom: 4rem;
-    transform: rotate(-3deg);
+    height: 8.5rem;
+    bottom: 4.5rem;
+    transform: rotate(-4deg);
     transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
   }
 
@@ -104,6 +105,24 @@
     z-index: 10;
     float: right;
   }
+}
+
+.work::before{
+  content: "";
+  background-color: #E6E6E6;
+  position: absolute;
+  z-index: 1;
+  width: 101%;
+  height: 8.5rem;
+  left: 0;
+  transform-origin: left top;
+  transform: rotate(0);
+  transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
+}
+
+.work.transform::before{
+  content: "";
+  transform: rotate(-4deg);
 }
 
 
