--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,8 +15,11 @@
 //Partials with font dependency
 @import "partials/constants";
 // Modules and Variables
+@import "modules/smooth";
 @import "modules/home";
+@import "modules/work";
 @import "modules/grid";
 @import "modules/nav";
 @import "modules/loader";
+@import "modules/project";
 @import "modules/fontStyles";
