--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -29,108 +29,17 @@
 
 }
 
-
-.work{
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #E6E6E6;
-  box-sizing: border-box;
-
-
-  .columns{
-    float: none;
-    width: auto;
-    background: rgb(172, 172, 172);
-  }
-  .columns:last-child:not(:first-child){
-    float: right;
-  }
-
-  .row{
-    // background: #f9f9f9;
-    // font-size: 11px;
-    // margin-bottom: 10px;
-    // line-height: 2rem;
-    // border: solid 1px #c6c6c6;
-    // margin-bottom: 1.5rem;
-    // margin-top: -1.5rem;
-  }
-
-  .angle{
-    background-color: #E6E6E6;
-    position: relative;
-    width: 101%;
-    height: 8.5rem;
-    bottom: 4.5rem;
-    transform: rotate(-4deg);
-    transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
-  }
-
-  .title{
-    // display: block;
-    @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(255, 255, 255));
-    position: fixed;
-    top:50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    text-decoration: underline;
-    text-transform: lowercase;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    pointer-events: none;
-    z-index: 19;
-  }
-
-  .left{
-    position: relative;
-    width: 1rem;
-    height: 20rem;
-    background: #FFFFFF;
-    left: -1rem;
-    top: -5rem;
-    z-index: 10;
-    float: left;
-  }
-
-  .right{
-    position: relative;
-    width: 1rem;
-    height: 20rem;
-    background: #FFFFFF;
-    left: 1rem;
-    top: -25rem;
-    z-index: 10;
-    float: right;
-  }
-}
-
-.work::before{
-  content: "";
-  background-color: #E6E6E6;
-  position: absolute;
-  z-index: 1;
-  width: 101%;
-  height: 8.5rem;
-  left: 0;
-  transform-origin: left top;
-  transform: rotate(0);
-  transition: transform 1.4s cubic-bezier(.77,0,.175,1).1s;
-}
-
-.work.transform::before{
-  content: "";
-  transform: rotate(-4deg);
-}
+// .work.transform::after{
+//   content: "";
+//   transform: rotate(-4deg);
+// }
 
 
 .contact{
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: $white;
+  height: 100rem;
+  background-color: $primary;
 }
 
 .scroll{
