--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -17,8 +17,12 @@
     position:fixed;
     margin-top: 1rem;
     @include use-normal-font($extraBold, 400, 1.0rem, 0, rgb(0, 0, 0));
-    text-decoration: underline;
+    // text-decoration: underline;
     color: #000;
+    a{
+      background-color: #000;
+      color: #fff;
+    }
   }
 
 
