--- a/app/styles/partials/_constants.scss
+++ b/app/styles/partials/_constants.scss
@@ -15,8 +15,8 @@ body{
 }
 
 html{
-  overflow-x: hidden;
-  overflow-y: hidden;
+  // overflow-x: hidden;
+  // overflow-y: hidden;
 }
 
 html, body, p{
