--- a/app/styles/modules/_home.scss
+++ b/app/styles/modules/_home.scss
@@ -8,6 +8,8 @@
   height: 100vh;
   background-position:50% 50%;
   background-size: cover;
+  transition: transform 100ms linear;
+  // background-color: $primary;
   // transition: all 500ms ease;
 }
 
@@ -50,10 +52,12 @@
 
 .scroll_hint{
   position: absolute;
-  bottom: 20%;
+  bottom: 9vh;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
+
+
 
 .circle{
   // margin-top: 60rem;
