--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -1,9 +1,9 @@
 
-// .project{
-//   position: absolute;
-//   width: 100%;
-//   height: 100%;
-//   overflow: hidden;
-//   background-color: rgba(255, 255, 255, 1);;
-//   z-index: 33;
-// }
+.project{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 55, 255, 1);;
+  z-index: 33;
+}
