test of new nav

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@
 @import "partials/constants";
 // Modules and Variables
 @import "modules/smooth";
+@import "modules/links";
 @import "modules/home";
 @import "modules/work";
 @import "modules/grid";
