--- a/app/styles/modules/_project.scss
+++ b/app/styles/modules/_project.scss
@@ -1,9 +1,291 @@
+// style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0)
 
-.project{
-  position: absolute;
+
+article{
+  height: 6rem;
+  background-color: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  // vertical-align: baseline;
+  // z-index: 2;
+  margin-bottom: 1rem;
+}
+
+.title{
+  position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  background-color: rgba(255, 55, 255, 1);;
-  z-index: 33;
+  text-align: left;
+  left: 50%;
+  // display: block;
+  @include use-normal-font($extraBold, 400, 6.25rem, 0, rgb(255, 255, 255));
+  // top:50%;
+  // left: 50%;
+  // transform: translateX(-50%) translateY(-50%);
+  text-decoration: underline;
+  // text-transform: lowercase;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: auto;
+}
+
+.cont-list-work {
+    clear: both;
+
+    a{
+      margin: 0;
+      padding: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+      background: 0 0;
+    }
+
+    .wrapper-link{
+      width: auto;
+      max-width: 1440px;
+      float: none;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+
+    .link-project {
+        display: block;
+        text-indent: 150%;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .link-project {
+        position: absolute;
+        left: -60px;
+        z-index: 100;
+        top: 0;
+        height: 100%;
+        float: left;
+        clear: none;
+        width: 65.66667%;
+        margin-left: 34.33333%;
+        margin-right: 3%;
+        -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
+        transition: all .3s cubic-bezier(.615,.19,.305,.91);
+        -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+        transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+    }
+
+    a{
+      // text-decoration: none;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      font-size: 100%;
+      vertical-align: baseline;
+      background: 0 0;
+      z-index: 100;
+    }
+
+
+    .wrapper-work {
+      width: auto;
+      float: none;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .wrapper-work:before {
+      content: '';
+      display: table;
+    }
+
+    .wrapper-work:after {
+      content: '';
+      display: table;
+    }
+
+    .info-work {
+        position: relative;
+        border-bottom: 1px solid rgba(255,255,255,.2);
+        float: left;
+        clear: none;
+        width: 65.66667%;
+        margin-left: 34.33333%;
+        margin-right: 3%;
+        padding: 25px 0;
+
+        .mono-title {
+            position: absolute;
+            bottom: 35px;
+            left: -55px;
+        }
+    }
+
+    .link-detail {
+        float: left;
+        clear: none;
+        width: 65.66667%;
+        margin-left: 34.33333%;
+        margin-right: 3%;
+        position: absolute;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 20;
+
+        .cont-link-detail {
+          margin-right: 0;
+          float: left;
+          clear: none;
+          width: 29.56359%;
+          margin-left: 70.43641%;
+          margin-right: 5.65461%;
+          position: relative;
+          height: 100%;
+
+          .year {
+            display: block;
+            position: absolute;
+            top: 50%;
+            -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
+            transition: all .3s cubic-bezier(.615,.19,.305,.91);
+            -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+            transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+            -webkit-transform: translate(0,-50%);
+            -ms-transform: translate(0,-50%);
+            transform: translate(0,-50%);
+        }
+
+        .arrow-section {
+            width: 100%;
+            position: relative;
+            white-space: nowrap;
+            cursor: default;
+            padding-right: 40px;
+        }
+      }
+    }
+
+    .info-work-detail {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 10;
+        height: 0;
+        overflow: hidden;
+        -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+        transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+        .cont-info-work-detail {
+            position: absolute;
+            top: 0;
+            width: 100%;
+
+            .thetitle {
+              float: left;
+              clear: none;
+              width: 31.33333%;
+              margin-left: 0;
+              margin-right: 3%;
+              -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
+              transition: all .3s cubic-bezier(.615,.19,.305,.91);
+              -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+              transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+              -webkit-transform: translate(0,16px);
+              -ms-transform: translate(0,16px);
+              transform: translate(0,16px);
+              padding: 25px 0 10px;
+
+              h2 {
+                white-space: nowrap;
+                font-size: 3.8rem;
+                line-height: 1;
+                margin-bottom: 0;
+            }
+          }
+
+          .info-detail {
+              float: left;
+              clear: none;
+              width: 65.66667%;
+              margin-left: 0;
+              margin-right: 3%;
+
+              .detail {
+                  -webkit-transform: translate(0,16px);
+                  -ms-transform: translate(0,16px);
+                  transform: translate(0,16px);
+                  -webkit-transition: all .3s cubic-bezier(.615,.19,.305,.91);
+                  transition: all .3s cubic-bezier(.615,.19,.305,.91);
+                  -webkit-transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+                  transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+                  float: left;
+                  clear: none;
+                  width: 30.28765%;
+                  margin-left: 0;
+                  margin-right: 4.56853%;
+
+                  .detail .mono-title {
+                    padding-top: 23px;
+                    display: block;
+                    margin-bottom: 15px;
+                  }
+
+                  .name {
+                      display: block;
+                  }
+              }
+          }
+        }
+    }
+
+
+
+}
+
+.cont-list-work:before {
+    content: '';
+    display: table;
+}
+
+
+
+
+
+
+.wk {
+  position: relative;
+}
+
+.wk::before {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 100%;
+  transform: scaleX(1.3);
+  transform: scaleY(0);
+  transform-origin: 50% 0;
+  z-index: 20;
+  left: 0;
+  right: 0;
+  transition: all .3s cubic-bezier(.615,.19,.305,.91);
+  transition-timing-function: cubic-bezier(.615,.19,.305,.91);
+}
+
+.wk.active::before {
+    content: '';
+    -ms-transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+}
+
+.wk.color-10:before {
+    background-color: #ffde00;
 }
